testing the corner hypothesis >> added more scan results (need to fix)

--- a/scan-for-best/good_cases.ipynb
+++ b/scan-for-best/good_cases.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,184 @@
     "from util import model_utils\n",
     "from dsets.counterfact import CounterFactDataset\n",
     "from util import nethook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/counterfact.json does not exist. Downloading from https://memit.baulab.info/data/dsets/counterfact.json\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38b6832b57d648c288664b11f38f627b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0.00/43.0M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded dataset with 21919 elements\n",
+      "loaded counterfact dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "counterfact = CounterFactDataset(\"../data/\")\n",
+    "print(\"loaded counterfact dataset\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relation_counter = {}\n",
+    "\n",
+    "for c in counterfact:\n",
+    "    relation_id = c[\"requested_rewrite\"]['relation_id']\n",
+    "    if(relation_id not in relation_counter):\n",
+    "        relation_counter[relation_id] = {'count': 0, 'relation': c[\"requested_rewrite\"]['prompt']}\n",
+    "    relation_counter[relation_id]['count'] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'P103': {'count': 919, 'relation': 'The mother tongue of {} is'},\n",
+       " 'P140': {'count': 430, 'relation': 'The official religion of {} is'},\n",
+       " 'P1303': {'count': 513, 'relation': '{}, the'},\n",
+       " 'P17': {'count': 875, 'relation': '{}, which is located in'},\n",
+       " 'P190': {'count': 621, 'relation': 'What is the twin city of {}? It is'},\n",
+       " 'P740': {'count': 774, 'relation': '{}, that was created in'},\n",
+       " 'P178': {'count': 579, 'relation': '{} was created by'},\n",
+       " 'P495': {'count': 904, 'relation': '{}, created in'},\n",
+       " 'P127': {'count': 433, 'relation': '{}, by'},\n",
+       " 'P641': {'count': 318, 'relation': '{} professionally plays the sport'},\n",
+       " 'P176': {'count': 911, 'relation': '{}, developed by'},\n",
+       " 'P413': {'count': 952, 'relation': '{}, the'},\n",
+       " 'P364': {'count': 751, 'relation': 'The original language of {} was'},\n",
+       " 'P39': {'count': 476, 'relation': '{} is a'},\n",
+       " 'P276': {'count': 613, 'relation': '{} can be found in'},\n",
+       " 'P463': {'count': 163, 'relation': '{} belongs to the organization of'},\n",
+       " 'P159': {'count': 756, 'relation': 'The headquarter of {} is located in'},\n",
+       " 'P20': {'count': 816, 'relation': '{} expired at'},\n",
+       " 'P136': {'count': 847, 'relation': 'What does {} play? They play'},\n",
+       " 'P106': {'count': 821, 'relation': '{}, who works as'},\n",
+       " 'P30': {'count': 959, 'relation': '{} belongs to the continent of'},\n",
+       " 'P937': {'count': 846, 'relation': '{} found employment in'},\n",
+       " 'P449': {'count': 794, 'relation': '{} was released on'},\n",
+       " 'P27': {'count': 958, 'relation': '{} has a citizenship from'},\n",
+       " 'P1412': {'count': 924, 'relation': 'The language used by {} is'},\n",
+       " 'P101': {'count': 545, 'relation': \"{}'s domain of work is\"},\n",
+       " 'P19': {'count': 779, 'relation': '{} was born in'},\n",
+       " 'P37': {'count': 891, 'relation': 'In {}, an official language is'},\n",
+       " 'P138': {'count': 279, 'relation': '{} is named for'},\n",
+       " 'P131': {'count': 714, 'relation': '{} is in'},\n",
+       " 'P407': {'count': 216, 'relation': '{} was written in'},\n",
+       " 'P108': {'count': 350, 'relation': '{}, who is employed by'},\n",
+       " 'P36': {'count': 139, 'relation': \"{}'s capital is\"},\n",
+       " 'P264': {'count': 53, 'relation': '{} label :'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relation_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'prompt': \"{}'s capital is\",\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'London', 'id': 'Q84'},\n",
+       "  'target_true': {'str': 'Medina', 'id': 'Q35484'},\n",
+       "  'subject': 'Al Madinah Region'},\n",
+       " {'prompt': 'The capital of {} is',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Florence', 'id': 'Q2044'},\n",
+       "  'target_true': {'str': 'Kabul', 'id': 'Q5838'},\n",
+       "  'subject': 'Democratic Republic of Afghanistan'},\n",
+       " {'prompt': '{}, which has the capital city',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Dresden', 'id': 'Q1731'},\n",
+       "  'target_true': {'str': 'Helsinki', 'id': 'Q1757'},\n",
+       "  'subject': 'Uusimaa'},\n",
+       " {'prompt': '{}, which has the capital city',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Rome', 'id': 'Q220'},\n",
+       "  'target_true': {'str': 'Mumbai', 'id': 'Q1156'},\n",
+       "  'subject': 'Mumbai City district'},\n",
+       " {'prompt': '{}, which has the capital',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Madrid', 'id': 'Q2807'},\n",
+       "  'target_true': {'str': 'Delhi', 'id': 'Q1353'},\n",
+       "  'subject': 'Tughlaq dynasty'},\n",
+       " {'prompt': 'The capital of {} is',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Paris', 'id': 'Q90'},\n",
+       "  'target_true': {'str': 'Madrid', 'id': 'Q2807'},\n",
+       "  'subject': 'Second Spanish Republic'},\n",
+       " {'prompt': '{}, which has the capital city',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'London', 'id': 'Q84'},\n",
+       "  'target_true': {'str': 'Paris', 'id': 'Q90'},\n",
+       "  'subject': 'Metropolis of Greater Paris'},\n",
+       " {'prompt': 'The capital city of {} is',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Victoria', 'id': 'Q2132'},\n",
+       "  'target_true': {'str': 'Delhi', 'id': 'Q1353'},\n",
+       "  'subject': 'Delhi Sultanate'},\n",
+       " {'prompt': \"{}'s capital city is\",\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Prague', 'id': 'Q1085'},\n",
+       "  'target_true': {'str': 'Jakarta', 'id': 'Q3630'},\n",
+       "  'subject': 'Dutch East Indies'},\n",
+       " {'prompt': 'The capital of {} is',\n",
+       "  'relation_id': 'P36',\n",
+       "  'target_new': {'str': 'Jerusalem', 'id': 'Q1218'},\n",
+       "  'target_true': {'str': 'Warsaw', 'id': 'Q270'},\n",
+       "  'subject': 'Poland'}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rid = \"P36\"\n",
+    "[c['requested_rewrite'] for c in counterfact if c['requested_rewrite']['relation_id'] == rid][0:10]"
    ]
   },
   {
