tested with critical cases. updated corner methods

--- a/notebooks/case_1_letter_of_token.ipynb
+++ b/notebooks/case_1_letter_of_token.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt = \"\"\"grape is spelled G-R-A-P-E\n",
+    "# monitor starts with M-O-N-I-T-O-R\n",
+    "# {} is spelled\"\"\"\n",
+    "    \n",
+    "# txt, ret_dict = model_utils.generate_fast(\n",
+    "#     model, tokenizer, \n",
+    "#     prompts=[prompt.format('arnab')], max_new_tokens=20, \n",
+    "#     get_answer_tokens=True, argmax_greedy=True\n",
+    "# )\n",
+    "# txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,52 +140,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66.875 [' C', ' S', ' M', ' L', ' P']\n"
+      "66.875 [(' C', 117.062), (' S', 117.0), (' M', 116.812), (' L', 116.688), (' P', 116.438)]\n"
      ]
     }
    ],
    "source": [
     "simple_corner = corner_estimator.estimate_simple_corner(objects, scale_up=70)\n",
-    "print(simple_corner.norm().item(), corner_estimator.get_vocab_representation(simple_corner))"
+    "print(simple_corner.norm().item(), corner_estimator.get_vocab_representation(simple_corner, get_logits=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52.5 [(' S', 46.125), (' C', 46.0), (' D', 45.781), (' P', 45.062), (' R', 45.031)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# lin_inv_corner = corner_estimator.estimate_lin_inv_corner(objects, target_logit_value=50)\n",
-    "# print(lin_inv_corner.norm().item(), corner_estimator.get_vocab_representation(lin_inv_corner))"
+    "lin_inv_corner = corner_estimator.estimate_lin_inv_corner(objects, target_logit_value=50)\n",
+    "print(lin_inv_corner.norm().item(), corner_estimator.get_vocab_representation(lin_inv_corner, get_logits=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.5625 [(' Q', 109.312), (' X', 109.188), (' I', 109.188), (' Y', 109.125), (' O', 109.125)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# avg_corner = corner_estimator.estimate_average_corner_with_gradient_descent(objects, average_on=5, target_logit_value=50, verbose=False)\n",
-    "# print(avg_corner.norm().item(), corner_estimator.get_vocab_representation(avg_corner))"
+    "lst_sq_corner = corner_estimator.estimate_corner_lstsq_solve(objects, target_logit=40)\n",
+    "print(lst_sq_corner.norm().item(), corner_estimator.get_vocab_representation(lst_sq_corner, get_logits=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['month',\n",
+       " 'major',\n",
+       " 'star',\n",
+       " 'areas',\n",
+       " 'future',\n",
+       " 'space',\n",
+       " 'committee',\n",
+       " 'london',\n",
+       " 'washington',\n",
+       " 'meeting']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_with_test_cases(relation_operator):\n",
+    "def check_with_test_cases(relation_operator, word_list = words):\n",
     "\n",
     "    test_cases = [\n",
-    "        (w, -1, w[0].upper()) for w in words\n",
+    "        (w, -1, w[0].upper()) for w in word_list\n",
     "    ]\n",
     "\n",
     "    for subject, subject_token_index, target in test_cases:\n",
@@ -191,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +256,7 @@
       "major, target: M   ==>   predicted: [' M', ' C', ' D', ' P', ' S']\n",
       "star, target: S   ==>   predicted: [' S', ' M', ' T', ' P', ' C']\n",
       "areas, target: A   ==>   predicted: [' C', ' B', ' S', ' P', ' F']\n",
-      "future, target: F   ==>   predicted: [' T', ' C', ' E', ' D', ' B']\n",
+      "future, target: F   ==>   predicted: [' T', ' C', ' D', ' E', ' B']\n",
       "space, target: S   ==>   predicted: [' S', ' M', ' P', ' B', ' R']\n",
       "committee, target: C   ==>   predicted: [' C', ' B', ' T', ' D', ' S']\n",
       "london, target: L   ==>   predicted: [' C', ' B', ' S', ' D', ' P']\n",
@@ -225,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +290,7 @@
     "            others = set(top_performers) - {(s, s_idx, o)}\n",
     "            others = random.sample(list(others), k = min(num_icl, len(list(others)))) \n",
     "            prompt = \"\"\n",
-    "            prompt += \"\\n\".join(relation_prompt.format(s_other) + f\" {o_other}.\" for s_other, idx_other, o_other in others) + \"\\n\"\n",
+    "            prompt += \"\\n\".join(relation_prompt.format(s_other) + f\"{o_other}.\" for s_other, idx_other, o_other in others) + \"\\n\"\n",
     "            prompt += relation_prompt\n",
     "            print(\"subject: \", s)\n",
     "            print(prompt)\n",
@@ -282,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('major', -1, ' M'), ('star', -1, ' S'), ('areas', -1, ' A'), ('future', -1, ' F')]\n"
+      "[('month', -1, ' M'), ('major', -1, ' M'), ('star', -1, ' S'), ('areas', -1, ' A'), ('future', -1, ' F'), ('space', -1, ' S'), ('committee', -1, ' C'), ('london', -1, ' L'), ('washington', -1, ' W'), ('meeting', -1, ' M')]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65dcbc95ea2641ae9036fbfa522e8be2",
+       "model_id": "e071843a661b4761871b767237d5664b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ad068872e9943fe8e2bce4c97f2112c",
+       "model_id": "3171197d171845d6b3490975d633a554",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,35 +379,35 @@
      "output_type": "stream",
      "text": [
       "subject:  future\n",
-      "star starts with  S.\n",
-      "major starts with  M.\n",
-      "{} starts with\n",
-      "tensor(22.5000, device='cuda:0', dtype=torch.float16) tensor(387.7500, device='cuda:0', dtype=torch.float16)\n",
+      " space starts with S.\n",
+      " london starts with L.\n",
+      " {} starts with\n",
+      "tensor(29., device='cuda:0', dtype=torch.float16) tensor(358.2500, device='cuda:0', dtype=torch.float16)\n",
+      "\n",
+      "subject:  london\n",
+      " areas starts with A.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(34.9375, device='cuda:0', dtype=torch.float16) tensor(308.5000, device='cuda:0', dtype=torch.float16)\n",
       "\n",
       "subject:  areas\n",
-      "star starts with  S.\n",
-      "future starts with  F.\n",
-      "{} starts with\n",
-      "tensor(17.0156, device='cuda:0', dtype=torch.float16) tensor(412.5000, device='cuda:0', dtype=torch.float16)\n",
+      " space starts with S.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(24.3594, device='cuda:0', dtype=torch.float16) tensor(382.2500, device='cuda:0', dtype=torch.float16)\n",
       "\n",
-      "subject:  major\n",
-      "future starts with  F.\n",
-      "areas starts with  A.\n",
-      "{} starts with\n",
-      "tensor(19.5781, device='cuda:0', dtype=torch.float16) tensor(399.7500, device='cuda:0', dtype=torch.float16)\n",
-      "\n",
-      "subject:  star\n",
-      "areas starts with  A.\n",
-      "major starts with  M.\n",
-      "{} starts with\n",
-      "tensor(1.1416, device='cuda:0', dtype=torch.float16) tensor(413.5000, device='cuda:0', dtype=torch.float16)\n",
+      "subject:  space\n",
+      " london starts with L.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(22.4844, device='cuda:0', dtype=torch.float16) tensor(296.2500, device='cuda:0', dtype=torch.float16)\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e54641263b134f2b93f6299e9f1414a6",
+       "model_id": "7bb711b4b41240308ebcdcc24b770bb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,35 +423,35 @@
      "output_type": "stream",
      "text": [
       "subject:  major\n",
-      "star starts with  S.\n",
-      "areas starts with  A.\n",
-      "{} starts with\n",
-      "tensor(19.8438, device='cuda:0', dtype=torch.float16) tensor(407.7500, device='cuda:0', dtype=torch.float16)\n",
+      " space starts with S.\n",
+      " areas starts with A.\n",
+      " {} starts with\n",
+      "tensor(31.6562, device='cuda:0', dtype=torch.float16) tensor(369.5000, device='cuda:0', dtype=torch.float16)\n",
       "\n",
-      "subject:  future\n",
-      "major starts with  M.\n",
-      "star starts with  S.\n",
-      "{} starts with\n",
-      "tensor(21.2031, device='cuda:0', dtype=torch.float16) tensor(386.2500, device='cuda:0', dtype=torch.float16)\n",
-      "\n",
-      "subject:  star\n",
-      "major starts with  M.\n",
-      "areas starts with  A.\n",
-      "{} starts with\n",
-      "tensor(3.6602, device='cuda:0', dtype=torch.float16) tensor(399.5000, device='cuda:0', dtype=torch.float16)\n",
+      "subject:  space\n",
+      " future starts with F.\n",
+      " areas starts with A.\n",
+      " {} starts with\n",
+      "tensor(19.2500, device='cuda:0', dtype=torch.float16) tensor(351.5000, device='cuda:0', dtype=torch.float16)\n",
       "\n",
       "subject:  areas\n",
-      "future starts with  F.\n",
-      "major starts with  M.\n",
-      "{} starts with\n",
-      "tensor(21.2656, device='cuda:0', dtype=torch.float16) tensor(392.7500, device='cuda:0', dtype=torch.float16)\n",
+      " major starts with M.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(20.4688, device='cuda:0', dtype=torch.float16) tensor(354., device='cuda:0', dtype=torch.float16)\n",
+      "\n",
+      "subject:  future\n",
+      " major starts with M.\n",
+      " areas starts with A.\n",
+      " {} starts with\n",
+      "tensor(20.2656, device='cuda:0', dtype=torch.float16) tensor(365., device='cuda:0', dtype=torch.float16)\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12cd38dbb86f480db722090578a58233",
+       "model_id": "403c9208291a439386443cd9ec3a0b04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,40 +466,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subject:  star\n",
-      "major starts with  M.\n",
-      "areas starts with  A.\n",
-      "{} starts with\n",
-      "tensor(3.6602, device='cuda:0', dtype=torch.float16) tensor(399.5000, device='cuda:0', dtype=torch.float16)\n",
-      "\n",
-      "subject:  areas\n",
-      "major starts with  M.\n",
-      "star starts with  S.\n",
-      "{} starts with\n",
-      "tensor(21.4688, device='cuda:0', dtype=torch.float16) tensor(396.7500, device='cuda:0', dtype=torch.float16)\n",
-      "\n",
       "subject:  future\n",
-      "star starts with  S.\n",
-      "major starts with  M.\n",
-      "{} starts with\n",
-      "tensor(22.5000, device='cuda:0', dtype=torch.float16) tensor(387.7500, device='cuda:0', dtype=torch.float16)\n",
+      " london starts with L.\n",
+      " star starts with S.\n",
+      " {} starts with\n",
+      "tensor(27.4375, device='cuda:0', dtype=torch.float16) tensor(342.2500, device='cuda:0', dtype=torch.float16)\n",
       "\n",
-      "subject:  major\n",
-      "star starts with  S.\n",
-      "future starts with  F.\n",
-      "{} starts with\n",
-      "tensor(26.1875, device='cuda:0', dtype=torch.float16) tensor(378.2500, device='cuda:0', dtype=torch.float16)\n",
+      "subject:  london\n",
+      " meeting starts with M.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(37.5000, device='cuda:0', dtype=torch.float16) tensor(320.5000, device='cuda:0', dtype=torch.float16)\n",
+      "\n",
+      "subject:  meeting\n",
+      " london starts with L.\n",
+      " future starts with F.\n",
+      " {} starts with\n",
+      "tensor(35.2500, device='cuda:0', dtype=torch.float16) tensor(365.5000, device='cuda:0', dtype=torch.float16)\n",
+      "\n",
+      "subject:  star\n",
+      " future starts with F.\n",
+      " london starts with L.\n",
+      " {} starts with\n",
+      "tensor(1.7354, device='cuda:0', dtype=torch.float16) tensor(387.5000, device='cuda:0', dtype=torch.float16)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "samples = [(w, -1, \" \" + w[0].upper()) for w in words][1:5]\n",
+    "samples = [(w, -1, \" \" + w[0].upper()) for w in words]\n",
     "print(samples)\n",
     "\n",
     "weights_and_biases = get_multiple_averaged_JB(\n",
     "    samples, \n",
-    "    relation_prompt=\"{} starts with\", \n",
+    "    relation_prompt=\" {} starts with\", \n",
     "    N = 3, \n",
     "    calculate_at_lnf=False\n",
     ")"
@@ -453,43 +507,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'grape starts with G\\nmonitor starts with M\\n{} starts with'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "month, target: M   ==>   predicted: [' M', ' C', ' T', ' L', ' B']\n",
-      "major, target: M   ==>   predicted: [' M', ' D', ' C', ' T', ' S']\n",
-      "star, target: S   ==>   predicted: [' T', ' L', ' C', ' P', ' S']\n",
-      "areas, target: A   ==>   predicted: [' T', ' M', ' S', ' C', ' P']\n",
-      "future, target: F   ==>   predicted: [' M', ' D', ' C', ' S', ' P']\n",
-      "space, target: S   ==>   predicted: [' S', ' T', ' M', ' C', ' P']\n",
-      "committee, target: C   ==>   predicted: [' C', ' T', ' M', ' D', ' P']\n",
-      "london, target: L   ==>   predicted: [' L', ' M', ' C', ' D', ' T']\n",
-      "washington, target: W   ==>   predicted: [' D', ' W', ' M', ' C', ' S']\n",
-      "meeting, target: M   ==>   predicted: [' M', ' T', ' C', ' P', ' S']\n"
+      "prediction, target: P   ==>   predicted: [' P', ' Q', ' X', ' Y', ' G']\n",
+      "induction, target: I   ==>   predicted: [' I', ' U', ' X', ' N', ' H']\n",
+      "antonym, target: A   ==>   predicted: [' N', ' X', ' A', ' Y', ' T']\n",
+      "xerox, target: X   ==>   predicted: [' X', ' Q', ' Z', ' R', ' O']\n",
+      "geometry, target: G   ==>   predicted: [' G', ' Q', ' E', ' Y', ' R']\n",
+      "activation, target: A   ==>   predicted: [' A', ' V', ' X', ' C', ' Y']\n",
+      "jerusalem, target: J   ==>   predicted: [' J', ' Y', ' Z', ' U', ' G']\n",
+      "blueberry, target: B   ==>   predicted: [' B', ' Q', ' R', ' W', ' G']\n",
+      "understand, target: U   ==>   predicted: [' U', ' H', ' N', ' R', ' B']\n",
+      "granite, target: G   ==>   predicted: [' G', ' R', ' Q', ' K', ' J']\n",
+      "hygiene, target: H   ==>   predicted: [' H', ' G', ' Y', ' Q', ' K']\n",
+      "antic, target: A   ==>   predicted: [' A', ' T', ' C', ' N', ' O']\n"
      ]
     }
    ],
@@ -505,24 +541,31 @@
     "    # bias = torch.stack(\n",
     "    #     [wb['bias'] for wb in weights_and_biases]\n",
     "    # ).mean(dim=0),\n",
-    "    bias = simple_corner\n",
+    "    bias = lst_sq_corner\n",
     ")\n",
     "\n",
-    "check_with_test_cases(relation_operator)"
+    "check_with_test_cases(\n",
+    "    relation_operator,\n",
+    "    word_list= [\n",
+    "        \"prediction\", \"induction\", \"antonym\", 'xerox', 'geometry',\n",
+    "        \"activation\", \"jerusalem\", \"blueberry\", \"understand\", \"granite\",\n",
+    "        \"hygiene\", \"antic\"\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[' ', ' a', ' the', ' A', ' an']"
+       "[' S', ' A', ' a', ' E', ' M']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
