Clean up: namespace libs under src/ for now.

--- a/notebooks/corner_demo.ipynb
+++ b/notebooks/corner_demo.ipynb
@@ -27,8 +27,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "\n",
-    "from relations import estimate\n",
-    "from util import model_utils\n",
+    "from src.relations import estimate\n",
+    "from src.util import model_utils\n",
     "from baukit import nethook\n",
     "from operator import itemgetter"
    ]
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from relations.corner import CornerEstimator\n",
+    "from src.relations.corner import CornerEstimator\n",
     "corner_estimator = CornerEstimator(model=model, tokenizer=tokenizer)"
    ]
   },
