--- a/notebooks/icl.ipynb
+++ b/notebooks/icl.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from relations import estimate\n",
+    "from src.relations import estimate\n",
     "\n",
     "import baukit\n",
     "import torch\n",
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from relations import estimate\n",
+    "from src.relations import estimate\n",
     "\n",
     "import torch\n",
     "\n",
